securitygrps.tf
resource "aws_security_group" "app" {
  name        = "app-sg-${var.environment}"
  description = "allow ssh access"
  vpc_id      = data.terraform_remote_state.network.outputs.vpc_id

  tags = {
    Name = "application-sg"
  }
}

resource "aws_security_group_rule" "app_ingress_01" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.bastion.id
  security_group_id        = aws_security_group.app.id
}

resource "aws_security_group_rule" "app_ingress_02" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}

resource "aws_security_group_rule" "app_ingress_03" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8150
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}

resource "aws_security_group_rule" "app_egress_01" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.app.id
}

resource "aws_security_group" "asg" {
  name        = "terraform-sample_application_server-asg-${var.environment}"
  description = "allow port 8080 access"
  vpc_id      = data.terraform_remote_state.network.outputs.vpc_id
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.alb.id]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "alb" {
  name        = "terraform-sample_application_server-alb-${var.environment}"
  description = "allow port 8080 access"
  vpc_id      = data.terraform_remote_state.network.outputs.vpc_id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "bastion" {
  name        = "bastion-sg-${var.environment}"
  description = "allow ssh access"
  vpc_id      = data.terraform_remote_state.network.outputs.vpc_id

  tags = {
    Name = "bastion-sg"
  }
}

resource "aws_security_group_rule" "web_ingress_01" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion.id
}

resource "aws_security_group_rule" "web_egress_01" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.bastion.id
}
